--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.5.0",
     "@heroicons/react": "^2.1.1",
+    "@hookform/resolvers": "^3.3.4",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "next": "14.1.3",
     "next-auth": "^5.0.0-beta.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.1",
     "react-hot-toast": "^2.4.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
@@ -36,6 +38,7 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.12",
     "prisma": "^5.11.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
